--- a/generators/app/templates/static/.gitignore
+++ b/generators/app/templates/static/.gitignore
@@ -1,3 +1,12 @@
+index.js
+index.d.ts
+lib/**/*.d.ts
+lib/**/*.js
+lib/**/*.js.map
+test/**/*.js
+test/**/*.d.ts
+test/**/*.js.map
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Eclipse template
 
