--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-dodevops-typescript",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A highly opinionated Yeoman generator for typescript modules",
   "keywords": [
     "yeoman-generator",
@@ -21,6 +21,10 @@
   },
   "devDependencies": {
     "eslint": "^4.12.0",
-    "standard": "^10.0.3"
+    "standard": "^10.0.3",
+    "yeoman-test": "^1.7.0",
+    "mocha": "^4.0.1",
+    "chai": "^4.1.2",
+    "yeoman-assert": "^3.1.0"
   }
 }
