--- a/generators/app/templates/static/.gitignore
+++ b/generators/app/templates/static/.gitignore
@@ -1,4 +1,5 @@
 index.js
+index.js.map
 index.d.ts
 lib/**/*.d.ts
 lib/**/*.js
@@ -6,7 +7,7 @@ lib/**/*.js.map
 test/**/*.js
 test/**/*.d.ts
 test/**/*.js.map
-
+.tscache
 # Created by .ignore support plugin (hsz.mobi)
 ### Eclipse template
 
