--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-dodevops-typescript",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "A highly opinionated Yeoman generator for typescript modules",
   "keywords": [
     "yeoman-generator",
@@ -9,7 +9,11 @@
   "files": [
     "generators"
   ],
-  "author": "Dennis Ploeger",
+  "author": {
+    "name": "Dennis Ploeger",
+    "email": "develop@dieploegers.de",
+    "url": "https://dodevops.io"
+  },
   "license": "MIT",
   "homepage": "https://github.com/dodevops/yeoman-generator-typescript",
   "repository": {
@@ -18,12 +22,13 @@
   },
   "dependencies": {
     "git-remote-origin-url": "^2.0.0",
-    "yeoman-generator": "^4.0.0"
+    "yeoman-generator": "^4.10.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^4.1.0",
+    "mocha": "^8.0.1",
+    "prettier": "^2.0.5",
     "yeoman-assert": "^3.1.1",
-    "yeoman-test": "^2.0.0"
+    "yeoman-test": "^2.6.0"
   }
 }
