--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "type": "git",
     "url": "git://github.com/dodevops/yeoman-generator-typescript.git"
   },
+  "scripts": {
+    "test": "mocha test/**/*Test.js"
+  },
   "dependencies": {
     "git-remote-origin-url": "^2.0.0",
     "yeoman-generator": "^4.10.1"
